--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous">
+  </script>
+
   <script src="assets/particles/scripts/particles@2.0.0.min.js"></script>
   <script src="assets/particles/scripts/load.js"></script>
+  <script src="assets/user_scripts/BuildIndex.js"></script>
 
   <link rel="stylesheet" href="assets/user_css/index.css">
   <link rel="stylesheet" href="assets/user_css/fonts.css">
@@ -87,106 +94,17 @@
 
   <br> <hr> <br>
 
-  <h1>Select a Game</h1>
+  <div id="games-container">
+    <h1>Select a Game</h1>
 
-  <a href="./player.html#advancewars">Advance Wars</a><br>
-  <a href="./player.html#advancewars2">Advance Wars 2</a><br>
-  <a href="./player.html#aladdin">Aladdin</a><br>
-  <a href="./player.html#alienhominid">Alien Hominid</a><br>
-  <a href="./player.html#bomberman_max2blue">Bomberman Max 2 - Blue Advance</a><br>
-  <a href="./player.html#bomberman_tournament">Bomberman Tournament</a><br>
-  <a href="./player.html#bubblebobble">Bubble Bobble: Old and New</a><br>
-  <a href="./player.html#croket1">Croket! - Yume no Banker Survival!</a><br>
-  <a href="./player.html#croket2">Croket! 2 - Yami no Bank to Banqueen</a><br>
-  <a href="./player.html#croket3">Croket! 3 - Granu Oukoku no Nazo</a><br>
-  <a href="./player.html#croket4">Croket! 4 - Bank no Mori no Mamorigami</a><br>
-  <a href="./player.html#digimon_racing">Digimon Racing</a><br>
-  <a href="./player.html#dbz_supersonic">Dragon Ball Z - Supersonic Warriors</a><br>
-  <a href="./player.html#drilldozer">Drill Dozer</a><br>
-  <a href="./player.html#earthwormjim">Earthworm Jim</a><br>
-  <a href="./player.html#earthwormjim2">Earthworm Jim 2</a><br>
-  <a href="./player.html#ff1and2">Final Fantasy 1 & 2 Advance</a><br>
-  <a href="./player.html#ff4S">Final Fantasy IV Advance (Sound Restoration Mod)</a><br>
-  <a href="./player.html#ff6">Final Fantasy VI Advance</a><br>
-  <a href="./player.html#final_fantasy_tactics">Final Fantasy Tactics Advance</a><br>
-  <a href="./player.html#fire_emblem">Fire Emblem</a><br>
-  <a href="./player.html#frogger1">Frogger Advance - The Great Quest</a><br>
-  <a href="./player.html#frogger2">Frogger's Adventures - Temple of the Frog</a><br>
-  <a href="./player.html#frogger3">Frogger's Adventures 2 - The Lost Wand</a><br>
-  <a href="./player.html#fzero_gp">F-Zero - GP Legend</a><br>
-  <a href="./player.html#fzero_max">F-Zero - Maximum Velocity</a><br>
-  <a href="./player.html#gamewatch4">Game & Watch Gallery 4</a><br>
-  <a href="./player.html#goldensun">Golden Sun</a><br>
-  <a href="./player.html#gunstar_super_heroes">Gunstar Super Heroes</a><br>
-  <a href="./player.html#hamtaro_heartbreak">Hamtaro - Ham-Ham Heartbreak</a><br>
-  <a href="./player.html#iridion">Iridion 3D</a><br>
-  <a href="./player.html#kirbymirror">Kirby & The Amazing Mirror</a><br>
-  <a href="./player.html#kirbynightmare">Kirby: Nightmare in Dreamland</a><br>
-  <a href="./player.html#superstar">Mario & Luigi: Superstar Saga</a><br>
-  <a href="./player.html#mariokart">Mario Kart: Super Circuit</a><br>
-  <a href="./player.html#marioparty">Mario Party Advance</a><br>
-  <a href="./player.html#mariopinball">Mario Pinball Land</a><br>
-  <a href="./player.html#megamanbass">Megaman & Bass</a><br>
-  <a href="./player.html#megaman_battle1">Megaman Battle Network 1</a><br>
-  <a href="./player.html#megaman_battle2">Megaman Battle Network 2</a><br>
-  <a href="./player.html#megaman_battle3_blue">Megaman Battle Network 3 Blue</a><br>
-  <a href="./player.html#megaman_battle4_blue">Megaman Battle Network 4 Blue Moon</a><br>
-  <a href="./player.html#megaman_battle4_red">Megaman Battle Network 4 Red Sun</a><br>
-  <a href="./player.html#megaman_battle5">Megaman Battle Network 5 Team Protoman</a><br>
-  <a href="./player.html#megaman_battle6">Megaman Battle Network 6 Cybeast Falzar</a><br>
-  <a href="./player.html#megaman_zero1">Megaman Zero</a><br>
-  <a href="./player.html#megaman_zero2">Megaman Zero 2</a><br>
-  <a href="./player.html#megaman_zero3">Megaman Zero 3</a><br>
-  <a href="./player.html#megaman_zero4">Megaman Zero 4</a><br>
-  <a href="./player.html#metalslug">Metal Slug Advance</a><br>
-  <a href="./player.html#metroid_fusion">Metriod Fusion</a><br>
-  <a href="./player.html#momotarou_dentetsu">Momotarou Dentetsu G Gold Deck wo Tsukure!</a><br>
-  <a href="./player.html#monopoly">Monopoly</a><br>
-  <a href="./player.html#monster_force">Monster Force</a><br>
-  <a href="./player.html#mortal_kombat">Mortal Kombat Advance</a><br>
-  <a href="./player.html#onepiece">One Piece</a><br>
-  <a href="./player.html#pacman_world">Pacman World</a><br>
-  <a href="./player.html#pacman_world2">Pacman World 2</a><br>
-  <a href="./player.html#pokemonemerald">Pokemon Emerald</a><br>
-  <a href="./player.html#pokemongreen">Pokemon Leaf Green</a><br>
-  <a href="./player.html#pokemonred">Pokemon Fire Red</a><br>
-  <a href="./player.html#mysteryred">Pokemon Mystery Dungeon Red</a><br>
-  <a href="./player.html#pokemonruby">Pokemon Ruby</a><br>
-  <a href="./player.html#pokemonsapphire">Pokemon Sapphire</a><br>
-  <a href="./player.html#gba_video_pokemon_1">Pokemon Video Show Pak 1</a><br>
-  <a href="./player.html#gba_video_pokemon_2">Pokemon Video Show Pak 2</a><br>
-  <a href="./player.html#gba_video_pokemon_3">Pokemon Video Show Pak 3</a><br>
-  <a href="./player.html#gba_video_pokemon_4">Pokemon Video Show Pak 4</a><br>
-  <a href="./player.html#puyopop">Puyo Pop</a><br>
-  <a href="./player.html#sonic_advance">Sonic Advance</a><br>
-  <a href="./player.html#sonic_advance2">Sonic Advance 2</a><br>
-  <a href="./player.html#sonic_advance3">Sonic Advance 3</a><br>
-  <a href="./player.html#sonicbattle">Sonic Battle</a><br>
-  <a href="./player.html#sonicpinball">Sonic Pinball</a><br>
-  <a href="./player.html#spyro_adventure">Spyro Adventure</a><br>
-  <a href="./player.html#spyro_ice">Spyro: Season of Ice</a><br>
-  <a href="./player.html#spyro_flame">Spyro 2: Season of Flame</a><br>
-  <a href="./player.html#supermarioadvance">Super Mario Advance</a><br>
-  <a href="./player.html#supermarioadvance2">Super Mario Advance 2</a><br>
-  <a href="./player.html#supermarioadvance3">Super Mario Advance 3</a><br>
-  <a href="./player.html#supermarioadvance4">Super Mario Advance 4</a><br>
-  <a href="./player.html#supermonkeyballjr">Super Monkey Ball Jr</a><br>
-  <a href="./player.html#super_street_fighter_2_turbo_revival">Super Street Fighter II: Turbo Revival</a><br>
-  <a href="./player.html#super_street_fighter_3_alpha">Super Street Fighter III: Alpha</a><br>
-  <a href="./player.html#tales_of_phantasia">Tales of Phantasia</a><br>
-  <a href="./player.html#tak2_staff_of_dreams">Tak 2: The Staff of Dreams</a><br>
-  <a href="./player.html#tmnt">Teenage Mutant Ninja Turtles</a><br>
-  <a href="./player.html#tetris_worlds">Tetris Worlds</a><br>
-  <a href="./player.html#sims_bustin_out">The Sims: Bustin' Out</a><br>
-  <a href="./player.html#sims2">The Sims 2</a><br>
-  <a href="./player.html#simpsons">The Simpsons: Road Rage</a><br>
-  <a href="./player.html#turok_evolution">Turok Evolution</a><br>
-  <a href="./player.html#ty2">Ty the Tasmanian Tiger 2 - Bush Rescue</a><br>
-  <a href="./player.html#ty3">Ty the Tasmanian Tiger 3 - Night of the Quinkan</a><br>
-  <a href="./player.html#warioland4">Wario Land 4</a><br>
-  <a href="./player.html#wario_ware">Wario Ware Inc</a><br>
-  <a href="./player.html#zelda_past">The Legend of Zelda: A Link to the Past</a><br>
-  <a href="./player.html#zelda_minish">The Legend of Zelda: The Minish Cap</a><br>
+    <!-- Content will build itself!! :D -->
+
+    <!--  <a href="./player.html#advancewars">Advance Wars</a><br>  -->
+
+    <table align="center" id="games-container-table">
+      <tbody id="games-body"></tbody>
+    </table>
+  </div>
 
   <br> <hr> <br>
 
