im working on it okay

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <!--  <a href="./player.html#advancewars">Advance Wars</a><br>  -->
 
-    <table align="center" id="games-container-table">
+    <table cellpadding="40" align="center" id="games-container-table">
       <tbody id="games-body"></tbody>
     </table>
   </div>
